# imac3_td_digital_geometry

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
answer_sheets/: s3_calc.ods  td1.html  td1.md  td1_html.md  td2.md
answer_sheets/td1/: td1.html  td1.md
answer_sheets/td2/: td2.html  td2.md
answer_sheets/td3/: td3.html  td3.md
assets/td2/: rice_basmati_seg_bin.pgm  rice_camargue_seg_bin.pgm  rice_japanese_seg_bin.pgm
assets/td3/binary/knife/: 1  1.pgm  2  3  3.pgm  IMG_2756.pgm
assets/td3/binary/pliers/: IMG_2763.pgm  IMG_2764.pgm  IMG_2765.pgm  IMG_2766.pgm  IMG_2767.pgm
assets/td3/binary/wrench/: IMG_2740.pgm  IMG_2741.pgm  IMG_2742.pgm  IMG_2743.pgm
assets/td3/original/: IMG_2740.pgm  IMG_2741.pgm  IMG_2742.pgm  IMG_2743.pgm  IMG_2753.pgm  IMG_2756.pgm  IMG_2757.pgm  IMG_2763.pgm  IMG_2764.pgm  IMG_2765.pgm  IMG_2766.pgm  IMG_2767.pgm
include/util/: CompositeDigitalObject.hpp  CompositeDigitalObject.inl  DigitalComponent.hpp  DigitalComponent.inl  common.hpp  common.inl  eigen.hpp  eigen.inl
source/td1/: main.cpp
source/td2/: main.cpp
source/td3/: main.cpp
